# opengl

./: .gitignore  CMakeLists.txt  README.md  opengl.sln
.github/workflows/: cmake_multi_platform.yml
data/meshes/: teapot.mtl  untitled.gltf
data/meshes/baked light test/: untitled.gltf
data/meshes/model/: m.gltf
data/meshes/mp7/: mp7.gltf
data/meshes/shaders/: Light.glsl  LitObject.glsl  ScreenFrag.glsl  ScreenVertex.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  Vertex.glsl
data/meshes/sphere/: untitled.gltf
data/shaders/: LitObject.glsl  ScreenFrag.glsl  SkyboxFrag.glsl  Vertex.glsl
opengl/: Shader.h  Texture.h  imgui.ini  main.cpp  opengl.vcxproj  opengl.vcxproj.filters
opengl/dependencies/glad/include/glad/: glad.h
opengl/dependencies/glad/src/: glad.c
opengl/meshes/: meshtest.gltf
opengl/meshes/baked light test/: untitled.gltf
opengl/meshes/gun/: gun.gltf
opengl/meshes/sphere/: untitled.gltf
opengl/shaders/: LitObject.glsl  ScreenVertex.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  Vertex.glsl
opengl/src/: Camera.h  CubemapTexture.h  Framebuffer.h  LightSources.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Renderer.h  RendererContext.h  Shader.h  Texture.h  main.cpp
src/: Camera.h  CubemapTexture.h  Framebuffer.h  LightSources.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Renderbuffer.h  Renderer.h  RendererContext.h  Shader.h  StbiImageRAII.h  Texture.h  Vertex.h  main.cpp
